kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wanderlust
  labels:
    name: wanderlust
    environment: production
